# courgette

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  README.md
app/: CMakeLists.txt  prj.conf
app/boards/: stm32h747i_disco.overlay
app/include/: git_version.h.in
app/include/app/: activity_led.h  app_runtime.h  buf_pool.h  cmd_display.h  cmd_doom.h  cmd_sd.h  display.h  doom_task.h  error_indicator.h  heartbeat.h  proto_task.h  sd_ops.h  serial.h  serial_async.h
app/src/app/: app_runtime.c  cmd_display.c  cmd_doom.c  cmd_sd.c  doom_task.c  fatal.c  main.c  proto_task.c
app/src/drivers/: activity_led.c  display.c  error_indicator.c  heartbeat.c
app/src/platform/: buf_pool.c  fatal.c  sd_ops.c  serial_async.c  serial_stub.c
docs/: ARCHITECTURE.md  BUILD_AND_FLASH.md  CODING_STANDARDS.md  CONTRIBUTING.md  GETTING_STARTED.md  PROTOCOL.md  TESTING.md  display.md
lib/cmd/: dispatch.c  echo.c  mem.c  reboot.c  version.c
lib/cmd/include/cmd/: dispatch.h  echo.h  mem.h  reboot.h  version.h
lib/display/include/display/: pixel.h
lib/protocol/: protocol.c
lib/protocol/include/protocol/: protocol.h
lib/util/: crc32.c  ring_buffer.c
lib/util/include/util/: crc32.h  ring_buffer.h
scripts/: build.sh  env.sh  flash.sh  format.sh  lint.sh  monitor.sh  run_integration_tests  run_manual_integration_tests  setup.sh  test_integration.sh  test_unit.sh  tidy.sh
tests/pytest/: conftest.py  pyproject.toml  requirements.txt  test_tick.py
tests/pytest/fixtures/: display.py  protocol.py  sdcard.py  serial.py
tests/pytest/tests/: test_commands.py  test_display_basic.py  test_sd_individual.py  test_sd_large.py  test_sdcard.py  test_tick.py
tests/unit/: CMakeLists.txt
tests/unit/src/: test_ring_buffer.cpp
tests/unit/src/cmd/: CMakeLists.txt  test_cmd_dispatch.cpp
tests/unit/src/display/: CMakeLists.txt  test_display_pixel_conv.cpp
tests/unit/src/integration/: CMakeLists.txt  test_proto_sd_roundtrip.cpp
tests/unit/src/protocol/: CMakeLists.txt  test_protocol_encode_decode.cpp  test_protocol_stream_resync.cpp
tests/unit/src/ring_buffer/: CMakeLists.txt  test_ring_buffer_basic.cpp
tests/unit/src/sd/: CMakeLists.txt  fake_sd_ops.c  stubs.c  test_sd_cmd.cpp
tools/: manual_display_check.py  sd_cli.py
